[project]
name = "pov-et"
version = "0.1.0"
description = "Telegram bot for POV ET"
requires-python = ">=3.10"
dependencies = [
    "aiogram==3.10.0",
    "sqlalchemy==2.0.32",
    "greenlet==3.2.4",
    "aiosqlite==0.20.0",
    "pydantic-settings==2.4.0",
    "python-dotenv==1.0.1",
]

[tool.uv]
package = false
